[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/ui/tokens/MinionFood.tscn" type="PackedScene" id=1]
[ext_resource path="res://data/minions/Minion2.tres" type="Resource" id=2]
[ext_resource path="res://data/minions/Minion1.tres" type="Resource" id=3]
[ext_resource path="res://data/minions/Minion3.tres" type="Resource" id=4]
[ext_resource path="res://data/minions/Minion4.tres" type="Resource" id=5]
[ext_resource path="res://data/minions/Minion5.tres" type="Resource" id=6]
[ext_resource path="res://data/minions/Minion6.tres" type="Resource" id=7]
[ext_resource path="res://scenes/battle/ui/actions/ArmyActionBar.gd" type="Script" id=8]
[ext_resource path="res://assets/fonts/roboto_bold_16.tres" type="DynamicFont" id=9]
[ext_resource path="res://assets/fonts/roboto_bold_12.tres" type="DynamicFont" id=10]

[node name="ArmyActionBar" type="VBoxContainer"]
anchor_right = 1.0
margin_bottom = 137.0
size_flags_horizontal = 3
size_flags_vertical = 8
custom_constants/separation = 12
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoToggle" type="Button" parent="."]
margin_right = 360.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 10 )
toggle_mode = true
text = "+ Info"

[node name="Minions" type="HBoxContainer" parent="."]
margin_top = 33.0
margin_right = 360.0
margin_bottom = 100.0
alignment = 1

[node name="Minion1" parent="Minions" instance=ExtResource( 1 )]
visible = true
margin_left = 26.0
margin_right = 74.0
margin_bottom = 67.0
minion_data = ExtResource( 3 )

[node name="Minion2" parent="Minions" instance=ExtResource( 1 )]
visible = true
margin_left = 78.0
margin_right = 126.0
margin_bottom = 67.0
index = 1
minion_data = ExtResource( 2 )

[node name="Minion3" parent="Minions" instance=ExtResource( 1 )]
visible = true
margin_left = 130.0
margin_right = 178.0
margin_bottom = 67.0
index = 2
minion_data = ExtResource( 4 )

[node name="Minion4" parent="Minions" instance=ExtResource( 1 )]
visible = true
margin_left = 182.0
margin_right = 230.0
margin_bottom = 67.0
index = 3
minion_data = ExtResource( 5 )

[node name="Minion5" parent="Minions" instance=ExtResource( 1 )]
visible = true
margin_left = 234.0
margin_right = 282.0
margin_bottom = 67.0
index = 4
minion_data = ExtResource( 6 )

[node name="Minion6" parent="Minions" instance=ExtResource( 1 )]
visible = true
margin_left = 286.0
margin_right = 334.0
margin_bottom = 67.0
index = 5
minion_data = ExtResource( 7 )

[node name="Actions" type="HBoxContainer" parent="."]
margin_top = 112.0
margin_right = 360.0
margin_bottom = 137.0
custom_constants/separation = 16
alignment = 1

[node name="Cancel" type="Button" parent="Actions"]
margin_left = 76.0
margin_right = 172.0
margin_bottom = 25.0
rect_min_size = Vector2( 96, 0 )
custom_fonts/font = ExtResource( 9 )
text = "Cancel"

[node name="Deploy" type="Button" parent="Actions"]
margin_left = 188.0
margin_right = 284.0
margin_bottom = 25.0
rect_min_size = Vector2( 96, 0 )
custom_fonts/font = ExtResource( 9 )
text = "Deploy"

[connection signal="toggled" from="InfoToggle" to="." method="_on_info_toggled"]
[connection signal="deselected" from="Minions/Minion1" to="." method="_on_token1_deselected"]
[connection signal="selected" from="Minions/Minion1" to="." method="_on_token1_selected"]
[connection signal="deselected" from="Minions/Minion2" to="." method="_on_token2_deselected"]
[connection signal="selected" from="Minions/Minion2" to="." method="_on_token2_selected"]
[connection signal="deselected" from="Minions/Minion3" to="." method="_on_token3_deselected"]
[connection signal="selected" from="Minions/Minion3" to="." method="_on_token3_selected"]
[connection signal="deselected" from="Minions/Minion4" to="." method="_on_token4_deselected"]
[connection signal="selected" from="Minions/Minion4" to="." method="_on_token4_selected"]
[connection signal="deselected" from="Minions/Minion5" to="." method="_on_token5_deselected"]
[connection signal="selected" from="Minions/Minion5" to="." method="_on_token5_selected"]
[connection signal="deselected" from="Minions/Minion6" to="." method="_on_token6_deselected"]
[connection signal="selected" from="Minions/Minion6" to="." method="_on_token6_selected"]
[connection signal="pressed" from="Actions/Cancel" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="Actions/Deploy" to="." method="_on_deploy_button_pressed"]
